--- a/src/styles.css
+++ b/src/styles.css
@@ -18,6 +18,8 @@ body {
     line-height: 1.25;
     margin-top: 0;
     margin-bottom: 0.5rem;
+
+    text-align: center;
   }
   
   #app {
@@ -42,10 +44,15 @@ body {
     margin: 10px;
   
   }
-  .botMove {
-  
+
+    .botMove {
+      @media screen and (max-width: 480px) {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
   }
-  
+
   #bot1 {
     background-color: rgb(239, 78, 172);
     :active {
@@ -66,20 +73,21 @@ body {
     background-color: rgb(239, 239, 78);
   }
   #bot6 {
-    background-color: rgb(239, 239, 78);
-  }
-  #bot7 {
     background-color: rgb(239, 78, 102);
   }
   
-  #bot8 {
+  #bot7 {
     background-color: rgb(83, 239, 78);
   }
   h2 {
     color: red;
     display: flex;
     justify-content: center;
+    margin-top: -20px;
   }
-  footer{
+  footer {
     margin: 200px 0 0 30px;
+    @media screen and (max-width: 480px) {
+      margin: 20px 0 0 30px;
+    }
   }
